--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ main {
 a {
     color: #fff;
     font-style: unset;
-    text-decoration: none
+    /* text-decoration: none; */
 }
 
 /*ridho*/
@@ -38,8 +38,13 @@ a {
 
 .heading {
     text-align: center;
-    font-size: 20px;
-    margin-bottom: 10px;
+    font-size: 30px;
+    margin-bottom: 50px;
+    cursor: default;
+}
+
+.heading hr {
+    margin-top: 30px;
 }
 
 .row {
@@ -55,9 +60,14 @@ a {
     border: 1px solid #ccc;
     margin-bottom: 50px;
     transition: 0.3s;
-    height: 250px;
+    height: 330px;
     border-radius: 30px;
     background: linear-gradient(to right, #3F3D56, #3F3D56);
+}
+
+p a {
+    font-style: italic;
+    font-weight: bold;
 }
 
 
@@ -77,20 +87,10 @@ a {
 
 .card-body {
     padding: 30px 20px;
-    height: 498px;
     font-size: 18px;
     color: rgb(255, 255, 255);
 }
 
-/* .card-content .btn {
-    display: block;
-    color: #fff;
-    text-align: center;
-    background: linear-gradient(to right, #7ea0bf, #1c3c66);
-    text-decoration: none;
-    padding: 10px 5px;
-    border-radius: 10px;
-} */
 
 .card-body img {
     width: 80px;
@@ -173,17 +173,42 @@ a {
     left: 100px;
 }
 
-#member1 {animation-timing-function: linear;}
-#member2 {animation-timing-function: ease;}
-#member3 {animation-timing-function: ease-in;}
-#member4 {animation-timing-function: ease-out;}
-#member5 {animation-timing-function: ease-in-out;}
-  
+#member1 {
+    animation-timing-function: linear;
+}
+
+#member2 {
+    animation-timing-function: ease;
+}
+
+#member3 {
+    animation-timing-function: ease-in;
+}
+
+#member4 {
+    animation-timing-function: ease-out;
+}
+
+#member5 {
+    animation-timing-function: ease-in-out;
+}
+
 @keyframes mymove {
-    from {top: -10px;}
-    to {top: 60px;}
-    from {top: 60px;}
-    to {top: -10px;}
+    from {
+        top: -10px;
+    }
+
+    to {
+        top: 60px;
+    }
+
+    from {
+        top: 60px;
+    }
+
+    to {
+        top: -10px;
+    }
 }
 
 footer {
@@ -200,4 +225,22 @@ footer p {
     font-size: 20px;
     text-align: center;
     padding: 5px;
+}
+
+@media all and (max-width: 1000px) {
+    .card-content {
+        width: 100%;
+    }
+}
+
+@media all and (max-width: 670px) {
+    .card-content {
+        width: 100%;
+        height: 100%;
+        margin: 10px 10px;
+    }
+
+    .heading {
+        margin-bottom: 10px;
+    }
 }
