--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,22 +223,59 @@ li {
     text-decoration: none;
 }
 
-.content-home{
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  padding-bottom: 500px;
+.header-right a:hover {
+    background-color: rgba(160, 146, 146, 0.87);
+}
+
+
+.container-home {
+    background: #aaaaaa;
+    padding: 400px 0 400px 0;
+    background-image: url('../../assets/img/background-image.png');
+    background-size: cover;
+    /* width: 100%; */
+    /* height: 100%; */
+}
+
+.container-home img {
+    width: 100%;
+    opacity: 0.6;
+}
+
+.content-home {
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    padding-bottom: 500px;
 }
 
 .card-home {
     display: inline-block;
-    width: 36.3%;
-    border: 1px solid #ccc;
-    margin-top: 470px;
-    margin-left: 190px;
+    width: 50%;
+    margin-top: 220px;
+    margin-left: 245px;
     transition: 0.3s;
-    height: 365px;
-    background: linear-gradient(to right, #6e6c7e, #8d8ba7);
+    height: 375px;
+    /* background: linear-gradient(to right, #6e6c7e, #8d8ba7); */
+
+}
+
+.content-text {
+    margin: 15px;
+    font-weight: bold;
+}
+
+.fa {
+    margin-right: 5px;
+}
+
+span.menu-icon {
+    color: white;
+    float: right;
+    font-size: 25px;
+    padding: 21px 0;
+    /* Gantikan property display ke none */
+    display: none;
 }
 
 #member1 {
@@ -311,4 +348,26 @@ footer p {
     .heading {
         margin-bottom: 10px;
     }
+
+    .container-home {
+        width: 100%;
+
+
+
+    }
+
+    .card-home {
+        width: 80%;
+        /* margin-top: 280px;
+        margin-left: 120px; */
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
+    .header-right {
+        display: none;
+    }
+
 }
