--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ a {
     /* text-decoration: none; */
 }
 
-/*ridho*/
+/* Articles */
 .container-content {
     width: 100%;
     margin: 0 auto;
@@ -102,7 +102,7 @@ p a {
     box-shadow: 0 0 40px -10px rgba(245, 69, 245, 0.336);
 }
 
-/*ridho */
+/* Our Team */
 
 .container-about {
     width: 90%;
@@ -173,6 +173,9 @@ p a {
     left: 100px;
 }
 
+/* Header */
+
+/*
 header {
     height: 65px;
     width: 100%;
@@ -226,7 +229,57 @@ li {
 .header-right a:hover {
     background-color: rgba(160, 146, 146, 0.87);
 }
+*/
 
+nav {
+    height: 50px;
+    background-color: #3F3D56;
+    color: white;
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+}
+
+nav h1 {
+    position: absolute;
+    width: 200px;
+    top: 8px;
+    left: 5%;
+}
+
+nav ul {
+    float: right;
+    margin-right: 25px;
+    list-style: none;
+}
+
+nav ul li {
+    display: inline-block;
+    line-height: 50px;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    position: relative;
+    padding: 5px 0;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+label #sign-one, label #sign-two {
+    font-size: 30px;
+    float: right;
+    line-height: 50px;
+    margin-right: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+#res-menu {
+    display: none;
+}
+
+/* Home */
 
 .container-home {
     background: #aaaaaa;
@@ -316,6 +369,8 @@ span.menu-icon {
     }
 }
 
+/* Footer */
+
 footer {
     width: 100%;
     bottom: 0px;
@@ -331,6 +386,8 @@ footer p {
     text-align: center;
     padding: 5px;
 }
+
+/* Responsive Breakpoint */
 
 @media all and (max-width: 1000px) {
     .card-content {
@@ -368,6 +425,43 @@ footer p {
 
     .header-right {
         display: none;
+    }
+
+    label #sign-one {
+        display: block;
+    }
+
+    nav ul {
+        position: fixed;
+        width: 100%;
+        background: #3F3D56;
+        top: 50px;
+        left: -100%;
+        text-align: center;
+        transition: .5s;
+        z-index: 10;
+    }
+
+    nav ul li{
+        display: block;
+        margin: 40px 0;
+        line-height: 30px;
+    }
+
+    nav ul li a {
+        font-size: 20px;
+    }
+
+    #res-menu:checked ~ ul {
+        left: 0;
+    }
+    
+    #res-menu:checked ~ label #sign-one{
+        display: none;
+    }
+
+    #res-menu:checked ~ label #sign-two{
+        display: block;
     }
 
 }
