--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,13 +281,21 @@ label #sign-one, label #sign-two {
 
 /* Home */
 
+main {
+    padding-top: 100px ;
+    text-align: center;
+}
+
+.main-image {
+    width: 80%;
+}
+
+main h1 {
+    font-size: 40px;
+}
+
+/*
 .container-home {
-    background: #aaaaaa;
-    padding: 400px 0 400px 0;
-    background-image: url('../../assets/img/background-image.png');
-    background-size: cover;
-    /* width: 100%; */
-    /* height: 100%; */
 }
 
 .container-home img {
@@ -309,10 +317,10 @@ label #sign-one, label #sign-two {
     margin-left: 245px;
     transition: 0.3s;
     height: 375px;
-    /* background: linear-gradient(to right, #6e6c7e, #8d8ba7); */
+    background: linear-gradient(to right, #6e6c7e, #8d8ba7); 
 
 }
-
+*/
 .content-text {
     margin: 15px;
     font-weight: bold;
@@ -462,6 +470,10 @@ footer p {
 
     #res-menu:checked ~ label #sign-two{
         display: block;
+    }
+
+    .main-image {
+        width: 100%;
     }
 
 }
