--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,15 +36,15 @@ a {
     background: linear-gradient(to right, #dadcdf, #888c8f);
 }
 
-.heading {
+.heading h1{
     text-align: center;
-    font-size: 30px;
-    margin-bottom: 50px;
+    padding-top: 80px;
+    margin-bottom: 30px;
     cursor: default;
 }
 
 .heading hr {
-    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 .row {
