--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,6 @@ a {
     border: 1px solid #ccc;
     margin-bottom: 50px;
     transition: 0.3s;
-    height: 330px;
     border-radius: 30px;
     background: linear-gradient(to right, #3F3D56, #3F3D56);
 }
@@ -68,12 +67,16 @@ a {
 p a {
     font-style: italic;
     font-weight: bold;
+    text-align: left;
 }
 
 
 .card-content:hover {
     background: linear-gradient(to right, #ff0eeb, #f75acf);
     box-shadow: 10px 10px 5px #aaaaaa;
+    transform: scale(1.05);
+    box-shadow: 0 0 40px -10px rgba(245, 69, 245, 0.336);
+    transition: all 0.5s;
 }
 
 .card-header {
@@ -86,20 +89,26 @@ p a {
 }
 
 .card-body {
-    padding: 30px 20px;
+    padding: 50px 20px;
     font-size: 18px;
     color: rgb(255, 255, 255);
+    display: flex;
 }
-
 
 .card-body img {
-    width: 80px;
-    float: left;
+    height: 20%;
+    width: 20%;
+    margin-right: 20px;
 }
 
-.card-content:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 40px -10px rgba(245, 69, 245, 0.336);
+.card-body p {
+    font-size: 15px;
+    text-align: left;
+}
+
+.card-body p span {
+    font-size: 13px;
+    opacity: 0.8;
 }
 
 /* Our Team */
@@ -107,13 +116,12 @@ p a {
 .container-about {
     width: 90%;
     padding-top: 10px;
-    margin: 50px auto;
+    margin: 10px auto 50px auto;
     text-align: center;
 }
 
 .about-title {
     font-size: 40px;
-    margin-top: 30px;
     margin-bottom: 50px;
 }
 
@@ -399,7 +407,7 @@ footer p {
 
 @media all and (max-width: 1000px) {
     .card-content {
-        width: 100%;
+        width: 80%;
     }
 }
 
